# condukt-ai

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  DECISIONS.md  LICENSE  README.md  ROADMAP.md  WORKLOG.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  turbo.json
.github/workflows/: docs-deploy.yml  publish.yml  quality.yml  ts-publish.yml  ts-quality.yml
apps/web/: README.md  astro.config.mjs  biome.json  package.json  starlight.config.mjs  tsconfig.json
condukt/: __init__.py  executor.py  models.py  parser.py  planner.py  safe_eval.py  spec.py
docs/: FOUNDATIONS.md  LEARNINGS.md  PROJECT_COMPASS.md
examples/: release_artifacts.mgl  release_fanout.mgl  release_resilient.mgl  ship_release.mgl
missiongraph/: __init__.py  cli.py  executor.py  models.py  parser.py  serialization.py  spec.py  validator.py
rust/condukt-rs/: Cargo.toml  README.md
rust/missiongraph-rs/: Cargo.toml  README.md
scripts/: conformance.py  parity_matrix.py
spec/: VERSIONING.md  ast-v1.schema.json  trace-v1.schema.json
tests/: test_conformance_harness.py  test_contract_versions.py  test_dual_runtime_goldens.py  test_end_to_end.py  test_parity_matrix.py  test_rust_cli.py
tests/golden/: release_artifacts.ast.json  release_artifacts.trace.normalized.json  release_fanout.ast.json  release_fanout.trace.normalized.json  release_resilient.ast.json  release_resilient.trace.normalized.json  (+2 more)
ts/: README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.typecheck.json
workers/: deploy_prod.py  lint.py  publish_release.py  security_scan.py  test_suite.py
(+62 files in other folders)
